Make Phobos LGPL!
Add LGPL v2.1 license to the project source tree and add license header to all
source files.

Change-Id: I5e662d64600392a6ce000ccbd3f0cd2a560e1942
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/2581
Reviewed-by: Linter
Reviewed-by: Henri Doreau <henri.doreau@cea.fr>
Tested-by: Jenkins

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -4,7 +4,7 @@ Release:	@RELEASE@%{?dist}
 Summary:	Parallel Heterogeneous OBject-Oriented Storage
 
 Group:		Applications/System
-License: 	All rights reserved CEA/DAM, 2014-2015
+License: 	LGPLv2.1
 URL:		http://www-hpc.cea.fr
 Source0: %{name}-%{version}.tar.gz
 
