scripts: update DB conversion script
Rewrite the conversion script in python.
Handle extra steps beyond the schema change:
   - convert extent sizes from json::str to json::int
   - convert media stats from json::str to json::int

Change-Id: I42a69aa8d453fbaf66e04347b81a8c6b1c3991af
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/2633
Reviewed-by: Linter
Tested-by: Jenkins
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -31,6 +31,7 @@ Requires: python
 Requires: python-argparse
 Requires: python-yaml
 Requires: clustershell
+Requires: python-psycopg2
 
 %description
 Phobos aims to implement high performance distributed object storage on a wide
