ltfs: fix default commands for ltfs mount/umount/format
Default commands to mount/umount/format LTFS filesystems were not right,
and the configuration template too.

Change-Id: Ie2bfd974042d455f33179f95cfafefa418eed6d3
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/2636
Reviewed-by: Linter
Tested-by: Jenkins
Reviewed-by: Henri Doreau <henri.doreau@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -30,9 +30,9 @@ sep_sn_query   = 0
 
 [ltfs]
 # LTFS command wrappers
-cmd_mount      = /usr/sbin/pho_ldm_helper mount  "%s" "%s"
-cmd_umount     = /usr/sbin/pho_ldm_helper umount "%s" "%s"
-cmd_format     = /usr/sbin/pho_ldm_helper format "%s" "%s"
+cmd_mount      = /usr/sbin/pho_ldm_helper mount_ltfs  "%s" "%s"
+cmd_umount     = /usr/sbin/pho_ldm_helper umount_ltfs "%s" "%s"
+cmd_format     = /usr/sbin/pho_ldm_helper format_ltfs "%s" "%s"
 
 [store]
 # default layout for put operations
