pkg: add rpath to libphobos_store
Add rpath to pkglibdir for libphobos_store, so it can load layout
modules.

Change-Id: Iafca6b0a8305f326a5033d0887cc0637d8cfc51e
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/2640
Reviewed-by: Linter
Tested-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Reviewed-by: Henri Doreau <henri.doreau@cea.fr>

--- a/src/store/Makefile.am
+++ b/src/store/Makefile.am
@@ -1,4 +1,5 @@
 AM_CFLAGS= $(CC_OPT)
+AM_LDFLAGS=-Wl,-rpath=$(libdir) -Wl,-rpath=$(pkglibdir)
 
 # use full phobosd name here, as it is installed
 # and can be used by client apps.
