cli: introduce const module
This manually written module uses the python C API to expose
Phobos constants to the CLI, as well as a couple static inline
functions.

Change-Id: Ifb185f99a569cc3f1532bc242bb8137e1bd8e47d
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/2645
Reviewed-by: Linter
Tested-by: Jenkins
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Reviewed-by: Quentin Bouget <quentin.bouget@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -17,7 +17,8 @@ SWIG_MODULES=phobos/capi/cfg.py \
 	     phobos/capi/_store.so \
 	     phobos/capi/store_wrap.c
 
-HAND_MODULES=phobos/capi/log.so
+HAND_MODULES=phobos/capi/log.so \
+	     phobos/capi/const.so
 
 EXTRA_DIST=phobos/capi/cfg.i \
 	   phobos/capi/dss.i \
@@ -26,6 +27,7 @@ EXTRA_DIST=phobos/capi/cfg.i \
 	   phobos/capi/store.i \
 	   phobos/capi/__init__.py \
 	   phobos/capi/log_module.c \
+	   phobos/capi/const_module.c \
 	   phobos/__init__.py \
 	   phobos/cfg.py \
 	   phobos/cli.py \
