cli: core FFI modules
Introduce phobos::ffi and phobos::types which use python ctypes module
to wrap phobos_store calls and expose them directly.

Change-Id: I2c594c2aff1785bbe887231c170241f283be3b2b
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/2646
Reviewed-by: Linter
Tested-by: Jenkins
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Reviewed-by: Quentin Bouget <quentin.bouget@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -32,9 +32,11 @@ EXTRA_DIST=phobos/capi/cfg.i \
 	   phobos/cfg.py \
 	   phobos/cli.py \
 	   phobos/dss.py \
+	   phobos/ffi.py \
 	   phobos/lrs.py \
 	   phobos/output.py \
 	   phobos/store.py \
+	   phobos/types.py \
 	   scripts/phobos \
 	   setup.py
 
