cli: reimplement log handling using ctypes
replace the manually written logging module by a ctypes-based one.
this result in more pythonic code and will eventually allow us to
get rid of SWIG entirely.

Change-Id: I8b4d762b940fc52d29e99528962d459e40c5ac3d
Phobos-Issue: PHO-146
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/2649
Reviewed-by: Linter
Tested-by: Jenkins
Reviewed-by: Quentin Bouget <quentin.bouget@cea.fr>
Reviewed-by: Henri Doreau <henri.doreau@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -14,21 +14,20 @@ SWIG_MODULES=phobos/capi/dss.py \
 	     phobos/capi/_store.so \
 	     phobos/capi/store_wrap.c
 
-HAND_MODULES=phobos/capi/log.so \
-	     phobos/capi/const.so
+HAND_MODULES=phobos/capi/const.so
 
 EXTRA_DIST=phobos/capi/dss.i \
 	   phobos/capi/lrs.i \
 	   phobos/capi/ldm.i \
 	   phobos/capi/store.i \
 	   phobos/capi/__init__.py \
-	   phobos/capi/log_module.c \
 	   phobos/capi/const_module.c \
 	   phobos/__init__.py \
 	   phobos/cfg.py \
 	   phobos/cli.py \
 	   phobos/dss.py \
 	   phobos/ffi.py \
+	   phobos/log.py \
 	   phobos/lrs.py \
 	   phobos/output.py \
 	   phobos/store.py \
