cli: final conversion to ctypes
Remove SWIG entirely from the project. Its interfaces where hard to
maintain and the code it produces is not very pleasant to deal with.

Ctypes is standard and fits very well into the project.

Change-Id: If02cd2028273215ff54c577532d2df27d6098bcc
Phobos-Issue: PHO-145
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/2650
Reviewed-by: Linter
Tested-by: Jenkins
Reviewed-by: Quentin Bouget <quentin.bouget@cea.fr>
Reviewed-by: Henri Doreau <henri.doreau@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -1,32 +1,15 @@
 AM_CFLAGS= $(CC_OPT)
 
+C_MODULES_SO=phobos/capi/const.so
 
-SWIG_MODULES=phobos/capi/dss.py \
-	     phobos/capi/_dss.so \
-	     phobos/capi/dss_wrap.c
-	     phobos/capi/lrs.py \
-	     phobos/capi/_lrs.so \
-	     phobos/capi/lrs_wrap.c \
-	     phobos/capi/ldm.py \
-	     phobos/capi/_ldm.so \
-	     phobos/capi/ldm_wrap.c \
-	     phobos/capi/store.py \
-	     phobos/capi/_store.so \
-	     phobos/capi/store_wrap.c
-
-HAND_MODULES=phobos/capi/const.so
-
-EXTRA_DIST=phobos/capi/dss.i \
-	   phobos/capi/lrs.i \
-	   phobos/capi/ldm.i \
-	   phobos/capi/store.i \
-	   phobos/capi/__init__.py \
+EXTRA_DIST=phobos/capi/__init__.py \
 	   phobos/capi/const_module.c \
 	   phobos/__init__.py \
 	   phobos/cfg.py \
 	   phobos/cli.py \
 	   phobos/dss.py \
 	   phobos/ffi.py \
+	   phobos/ldm.py \
 	   phobos/log.py \
 	   phobos/lrs.py \
 	   phobos/output.py \
@@ -36,14 +19,10 @@ EXTRA_DIST=phobos/capi/dss.i \
 	   setup.py
 
 all-local:
-	swig -python -I../include phobos/capi/dss.i
-	swig -python -I../include phobos/capi/lrs.i
-	swig -python -I../include phobos/capi/ldm.i
-	swig -python -I../include phobos/capi/store.i
 	python setup.py build --verbose
 
 clean-local:
-	rm -f $(SWIG_MODULES) $(HAND_MODULES)
+	rm -f $(C_MODULES_SO)
 
 pre-check-local:
 	../tests/test_lock.sh
