pkg: require jansson >= 2.5
Phobos code uses "json_t" typedef which was defined in Jansson 2.5.

Change-Id: Iec645585170321561a804a617205bae619f7f83c
Phobos-Issue: PHO-150
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/2728
Reviewed-by: Linter
Reviewed-by: Quentin Bouget <quentin.bouget@cea.fr>
Tested-by: Jenkins
Reviewed-by: Henri Doreau <henri.doreau@cea.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -77,6 +77,7 @@ AC_CHECK_HEADERS([ini_config.h], [], [AC_MSG_ERROR(missing libini_config header 
 AC_CHECK_HEADERS([openssl/sha.h], [], [AC_MSG_ERROR(missing openssl libcrypt header files)])
 AC_CHECK_HEADERS([attr/xattr.h], [], [AC_MSG_ERROR(missing libattr header files)])
 AC_CHECK_HEADERS([scsi/sg_io_linux.h], [], [AC_MSG_ERROR(missing sg3_utils header files)])
+PKG_CHECK_MODULES(JANSSON, [jansson >= 2.5])
 PKG_CHECK_MODULES(LIBPQ, [libpq >= 9.4])
 
 # Checks for typedefs, structures, and compiler characteristics.
