pkg: install libphobos_store.so in the base package
Change-Id: I37db6a7f8cc1a41eebe2e9a756177b32958ada5f
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/2880
Reviewed-by: Linter
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Tested-by: Jenkins
Reviewed-by: Henri Doreau <henri.doreau@cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -71,7 +71,7 @@ rm -f $RPM_BUILD_ROOT/%{_libdir}/phobos/libpho_layout_*.la
 
 %files
 
-%{_libdir}/libphobos_store.so.*
+%{_libdir}/libphobos_store.so*
 %{_libdir}/phobos/libpho_layout_*.so*
 %{_sbindir}/pho_*_helper
 %{_sbindir}/pho_convert_*
@@ -88,7 +88,6 @@ rm -f $RPM_BUILD_ROOT/%{_libdir}/phobos/libpho_layout_*.la
 
 %{_includedir}/pho_attrs.h
 %{_includedir}/phobos_store.h
-%{_libdir}/libphobos_store.so
 %{_libdir}/libphobos_store.la
 
 %changelog
