--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -91,6 +91,9 @@ rm -f $RPM_BUILD_ROOT/%{_libdir}/phobos/libpho_layout_*.la
 %{_libdir}/libphobos_store.la
 
 %changelog
+* Mon Jan 15 2018 - Thomas Leibovici <thomas.leibovici@cea.fr> - 1.1-4
+- Minor refresh with latest patches
+
 * Fri Sep 08 2017 - Henri Doreau <henri.doreau@cea.fr> - 1.1-3
 - Propery set LGPL headers to the project files
 - Reimplement CLI using ctypes instead of SWIG
