cli: call ldm_lib_scan from cli with 'phobos lib scan <device_path>'
Add a new C extension module to the python package to handle type
conversions and memory management between C and python worlds.

Add a new mechanism to facilitate rc checking when calling C from
python. This mechanism could be extended / adapted for all rc checks.

Change-Id: I666b8d5d7682e3c9927e3589b3185c0a0d141f99
Signed-off-by: Florent MONJALET <florent.monjalet@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/3434
Reviewed-by: Linter
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -1,6 +1,7 @@
 AM_CFLAGS= $(CC_OPT)
 
-C_MODULES_SO=phobos/core/const.so
+C_MODULES_SO=phobos/core/const.so \
+	     phobos/core/glue.so
 
 EXTRA_DIST=phobos/__init__.py \
 	   phobos/cli.py \
@@ -10,6 +11,7 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/core/const_module.c \
 	   phobos/core/dss.py \
 	   phobos/core/ffi.py \
+	   phobos/core/glue_module.c \
 	   phobos/core/ldm.py \
 	   phobos/core/log.py \
 	   phobos/core/lrs.py \
