Update enum media and device model type to varchar
Change-Id: Ie85e99d4ed5b8a20a5187cabb9c2ba4ab8ac81f4
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/3464
Reviewed-by: Linter
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Florent Monjalet <florent.monjalet@cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -37,3 +37,8 @@ cmd_format     = /usr/sbin/pho_ldm_helper format_ltfs "%s" "%s"
 [store]
 # default layout for put operations
 layout = simple
+
+[tape_model]
+# comma separated list of tape models, without any space
+# default: LTO5,LTO6,LTO7,LTO8,T10KB,T10KC,T10KD
+#supported_list = LTO5,LTO6,LTO7,LTO8,T10KB,T10KC,T10KD
