--- a/src/tests/phobos.conf
+++ b/src/tests/phobos.conf
@@ -1,2 +1,5 @@
 [dss]
 connect_string = dbname=phobos host=localhost user=phobos password=phobos
+
+[tape_model]
+supported_list = LTO5,LTO6,LTO7,LTO8,ratatouille
