lrs/store/layout: allow to only write to media with given tags
This commit adds the possibility to filter the media on which
objects (actually, their extents) will be written according to their
tags. This feature is currently exposed at the C API level.

This feature requires communication between the store and lrs layers.
The current layering imposes to pass tag information from store to lrs
via layout. Upcoming refactorings (with a broader scope) will remove
this necessity.

Even though tags can be seen as "yet another filter", the choice has
been made to propagate them via an additional field / function argument.
If more filtering mechanisms are added in the future, we might consider
introducing something like a "media_filter" type.

Change-Id: I84980a911702fe3bae52d12037fb3aa2dbb98937
Signed-off-by: Florent MONJALET <florent.monjalet@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/3886
Reviewed-by: Linter
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -5,11 +5,11 @@ AM_CFLAGS= $(CC_OPT)
 # 2) run TESTS and generate a summary
 check_PROGRAMS=test_common test_attrs test_mapper test_log test_store \
 	       test_dss test_cfg test_scsi test_scsi_scan test_lintape \
-               test_ldm
+               test_ldm test_type_utils
 
 # 1st step: low level tests
 UNIT_TESTS=test_common test_attrs test_mapper test_log test_cfg test_lintape \
-	   test_ldm
+	   test_ldm test_type_utils
 # 2nd step: integration tests
 INTEG_TESTS=test_dss.sh test_scsi.sh test_layouts.sh acceptance.sh
 
@@ -56,3 +56,6 @@ test_lintape_LDADD=../ldm/libpho_ldm.la ../cfg/libpho_cfg.la ../common/libpho_co
 
 test_ldm_SOURCES=test_ldm.c
 test_ldm_LDADD=../ldm/libpho_ldm.la ../cfg/libpho_cfg.la ../common/libpho_common.la
+
+test_type_utils_SOURCES=test_type_utils.c
+test_type_utils_LDADD=../common/libpho_common.la
