pho_convert_db: rename to phobos_db and move code to phobos py lib
This commit prepares the merge of all db helpers in the phobos_db
script.

Change-Id: I2a18f302be9b6122988f54785919c3c0f3e8bb3d
Signed-off-by: Florent MONJALET <florent.monjalet@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/3976
Reviewed-by: Linter
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -74,7 +74,7 @@ rm -f $RPM_BUILD_ROOT/%{_libdir}/phobos/libpho_layout_*.la
 %{_libdir}/libphobos_store.so*
 %{_libdir}/phobos/libpho_layout_*.so*
 %{_sbindir}/pho_*_helper
-%{_sbindir}/pho_convert_*
+%{_sbindir}/phobos_db
 %{python_sitearch}/phobos/*
 %{python_sitearch}/phobos-*-py?.?.egg-info
 %{_bindir}/phobos
