Update .gitignore (tags and .*.swp)
Change-Id: I06e5a0888b23e056e1515b6d81772a5fda7c65fd
Signed-off-by: Florent MONJALET <florent.monjalet@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/3985
Reviewed-by: Linter
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.so
 *~
 .#*
+.*.swp
 .deps/
 .libs
 Makefile
@@ -33,6 +34,7 @@ config.log
 config.status
 configure
 cscope.*
+tags
 libtool
 src/include/stamp-h1
 rpms/
