phobos_db: implement setup_db and drop_db
This implementation allows the administrator to choose a database
name, user and password. Most importantly, it does not provide a
default password, but forces the administrator to set one.

Change-Id: I7a836cca4327f6c5e06b4913c2259ca263dc8982
Signed-off-by: Florent MONJALET <florent.monjalet@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/3989
Reviewed-by: Linter
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -18,6 +18,7 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/core/store.py \
 	   phobos/db/__init__.py \
 	   phobos/db/__main__.py \
+	   phobos/db/db_config.py \
 	   scripts/phobos \
 	   setup.py
 
