--- a/Makefile.am
+++ b/Makefile.am
@@ -9,8 +9,8 @@ rpm: dist phobos.spec
 	rpmbuild --define="_topdir $(rpm_dir)" -ta $(distdir).tar.gz
 
 EXTRA_DIST= phobos.spec phobos.spec.in scripts/pho_ldm_helper \
-	    scripts/pho_dss_helper scripts/phobos_db \
+	    scripts/phobos_db \
 	    doc/INSTALL doc/cfg/template.conf ChangeLog
 
-sbin_SCRIPTS=scripts/pho_ldm_helper scripts/pho_dss_helper \
+sbin_SCRIPTS=scripts/pho_ldm_helper \
              scripts/phobos_db
