doc: replace INSTALL file by a more complete doc in markdown
Also add a link to README.md at the root of the project, so it is displayed
as the project's README on github.

Change-Id: I9f5088d6b91698dab112b2b21caf335976869849
Signed-off-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/4466
Reviewed-by: Linter
Reviewed-by: Florent Monjalet <florent.monjalet@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,7 +10,7 @@ rpm: dist phobos.spec
 
 EXTRA_DIST= phobos.spec phobos.spec.in scripts/pho_ldm_helper \
 	    scripts/phobos_db \
-	    doc/INSTALL doc/cfg/template.conf ChangeLog
+	    doc/README.md doc/cfg/template.conf ChangeLog
 
 sbin_SCRIPTS=scripts/pho_ldm_helper \
              scripts/phobos_db
