Mark the generated RPMs as pre-1.2
The current master version is no longer 1.1, as lot of new features
have been added.
This patchs sets current software version to 1.2 alpha1.

Change-Id: I55e4c54758af1403551ac2b97db961cbb5ed1bac
Signed-off-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/4752
Reviewed-by: Linter
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Florent Monjalet <florent.monjalet@cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -91,6 +91,9 @@ rm -f $RPM_BUILD_ROOT/%{_libdir}/phobos/libpho_layout_*.la
 %{_libdir}/libphobos_store.la
 
 %changelog
+* Tue Jun 18 2019 - Thomas Leibovici <thomas.leibovici@cea.fr> - 1.2-0.alpha1
+- Pre 1.2 release (Echo)
+
 * Mon Jan 15 2018 - Thomas Leibovici <thomas.leibovici@cea.fr> - 1.1-4
 - Minor refresh with latest patches
 
