packaging: add missing .sql files to the phobos rpm
Change-Id: I7e611ba8d081d2e7e1b008979ee1f8dbb3d1b8f7
Signed-off-by: Florent MONJALET <florent.monjalet@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/4820
Reviewed-by: Linter
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Tested-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -19,6 +19,10 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/db/__init__.py \
 	   phobos/db/__main__.py \
 	   phobos/db/db_config.py \
+	   phobos/db/sql/1.1/drop_schema.sql \
+	   phobos/db/sql/1.1/schema.sql \
+	   phobos/db/sql/1.2/drop_schema.sql \
+	   phobos/db/sql/1.2/schema.sql \
 	   scripts/phobos \
 	   setup.py
 
