--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -91,8 +91,15 @@ rm -f $RPM_BUILD_ROOT/%{_libdir}/phobos/libpho_layout_*.la
 %{_libdir}/libphobos_store.la
 
 %changelog
-* Tue Jun 18 2019 - Thomas Leibovici <thomas.leibovici@cea.fr> - 1.2-0.alpha1
+* Fri Jul 5 2019 - Thomas Leibovici <thomas.leibovici@cea.fr> - 1.2-0.alpha2
 - Pre 1.2 release (Echo)
+- 1.2 new features:
+    * Dual logging (stderr and syslog)
+    * phobos lib scan (improved 'mtx status')
+    * phobos_db tool (DB schema management, DB migration)
+    * retry when the number of concurrent PUT/GET > nb drives
+    * media tag management
+    * manage drive-tape compatibility rules (WIP)
 
 * Mon Jan 15 2018 - Thomas Leibovici <thomas.leibovici@cea.fr> - 1.1-4
 - Minor refresh with latest patches
