lrs: add compatibility model check between tape and drive
We add two new section types in config :
==============================================
[drive_type "LTO5_drive"]
models = ULTRIUM-TD5,ULT3580-TD5,...

[drive_type "LTO6_drive"]
models = ULTRIUM-TD6,ULT3580-TD6,...

[tape_type "LTO5"]
drive_rw = LTO5_drive,LTO6_drive

[tape_type "LTO6"]
drive_rw = LTO6_drive
==============================================

We add a media parameter to the dev_picker function. If we already
chose the media, we chose a drive which is compatible with it.

Change-Id: I5627cb31499fad6ca3d37e6cab02308ef38a6416
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Signed-off-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/4843
Reviewed-by: Linter
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Florent Monjalet <florent.monjalet@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -38,7 +38,36 @@ cmd_format     = /usr/sbin/pho_ldm_helper format_ltfs "%s" "%s"
 # default layout for put operations
 layout = simple
 
+######### Tape/drive support and compatibility rules ########
+# You should not modify the following configuration unless:
+#  * You want to add support for a new device or tape model
+#  * You don't want to take advantage of drive compatibility rules and you want
+#    to restrict them (e.g. if you don't want to write LTO5 tapes using LTO6
+#    drives).
+#############################################################
+
+[drive_type "LTO5_drive"]
+# List of drive models implementing LTO gen 5
+# (comma-separated list without any space)
+models = ULTRIUM-TD5,ULT3580-TD5,ULTRIUM-HH5,ULT3580-HH5,HH LTO Gen 5
+
+[drive_type "LTO6_drive"]
+# List of drive models implementing LTO gen 6
+# (comma-separated list without any space)
+models = ULTRIUM-TD6,ULT3580-TD6,ULTRIUM-HH6,ULT3580-HH6,HH LTO Gen 6
+
 [tape_model]
+# List of supported tape models (checked by "phobos tape add ...")
 # comma separated list of tape models, without any space
 # default: LTO5,LTO6,LTO7,LTO8,T10KB,T10KC,T10KD
 #supported_list = LTO5,LTO6,LTO7,LTO8,T10KB,T10KC,T10KD
+
+[tape_type "LTO5"]
+# List of drive types that can write LTO5 tapes
+# (comma-separated list without any space)
+drive_rw = LTO5_drive,LTO6_drive
+
+[tape_type "LTO6"]
+# List of drive types that can write LTO6 tapes
+# (comma-separated list without any space)
+drive_rw = LTO6_drive
