--- a/src/tests/phobos.conf
+++ b/src/tests/phobos.conf
@@ -3,3 +3,15 @@ connect_string = dbname=phobos host=localhost user=phobos password=phobos
 
 [tape_model]
 supported_list = LTO5,LTO6,LTO7,LTO8,ratatouille
+
+[drive_type "LTO5_drive"]
+models = ULTRIUM-TD5,ULT3580-TD5,ULTRIUM-HH5,ULT3580-HH5,HH LTO Gen 5
+
+[drive_type "LTO6_drive"]
+models = ULTRIUM-TD6,ULT3580-TD6,ULTRIUM-HH6,ULT3580-HH6,HH LTO Gen 6
+
+[tape_type "LTO5"]
+drive_rw = LTO5_drive,LTO6_drive
+
+[tape_type "LTO6"]
+drive_rw = LTO6_drive
