Imported from https://tl-cea@github.com/cea-hpc/phobos.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = Parallel Heterogeneous Object Store
+[access "refs/*"]
+	owner = group user/Thomas Leibovici (tl-cea)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/Thomas Leibovici (tl-cea)
+	label-Verified = -1..+1 group user/Thomas Leibovici (tl-cea)
+	push = group user/Thomas Leibovici (tl-cea)
+	read = group user/Thomas Leibovici (tl-cea)
+	rebase = group user/Thomas Leibovici (tl-cea)
+	removeReviewer = group user/Thomas Leibovici (tl-cea)
+	submit = group user/Thomas Leibovici (tl-cea)
+[access "refs/heads/*"]
+	create = group user/Thomas Leibovici (tl-cea)
+	push = +force group user/Thomas Leibovici (tl-cea)
+	pushMerge = group user/Thomas Leibovici (tl-cea)
+	read = group user/Thomas Leibovici (tl-cea)
+[access "refs/tags/*"]
+	push = group user/Thomas Leibovici (tl-cea)
+	push = +force group user/Thomas Leibovici (tl-cea)
