--- a/configure.ac
+++ b/configure.ac
@@ -4,8 +4,8 @@
 
 AC_PREREQ(2.59)
 
-AC_INIT([phobos], [1.2], [st.tgcc@cea.fr])
-RELEASE="0.alpha2"
+AC_INIT([phobos], [1.2.0], [st.tgcc@cea.fr])
+RELEASE="1"
 
 AC_DEFINE_UNQUOTED(RELEASE, "$RELEASE", [release info])
 AC_SUBST(RELEASE)
