--- a/project.config
+++ b/project.config
@@ -1,6 +1,7 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
+	action = cherry pick
 [project]
 	description = Parallel Heterogeneous Object Store
 [access "refs/*"]
