Modified project settings

--- a/project.config
+++ b/project.config
@@ -2,6 +2,7 @@
 	inheritFrom = All-Projects
 [submit]
 	action = cherry pick
+	mergeContent = false
 [project]
 	description = Parallel Heterogeneous Object Store
 [access "refs/*"]
@@ -22,3 +23,5 @@
 [access "refs/tags/*"]
 	push = group user/Thomas Leibovici (tl-cea)
 	push = +force group user/Thomas Leibovici (tl-cea)
+[receive]
+	requireChangeId = true
