Modify access rules

--- a/project.config
+++ b/project.config
@@ -10,7 +10,7 @@
 [access "refs/for/refs/*"]
 	label-Code-Review = -2..+2 group user/Thomas Leibovici (tl-cea)
 	label-Verified = -1..+1 group user/Thomas Leibovici (tl-cea)
-	push = group user/Thomas Leibovici (tl-cea)
+	push = +force group user/Thomas Leibovici (tl-cea)
 	read = group user/Thomas Leibovici (tl-cea)
 	rebase = group user/Thomas Leibovici (tl-cea)
 	removeReviewer = group user/Thomas Leibovici (tl-cea)
