Add label verified

--- a/project.config
+++ b/project.config
@@ -10,6 +10,8 @@
 [access "refs/for/refs/*"]
 	label-Code-Review = -2..+2 group user/Thomas Leibovici (tl-cea)
 	label-Verified = -1..+1 group user/Thomas Leibovici (tl-cea)
+	label-Verified = -1..+1 group user/CEA-HPC (cea-gerrithub-hpc)
+	label-Verified = -1..+1 group user/ganesha-triggers
 	push = group user/Thomas Leibovici (tl-cea)
 	read = group user/Thomas Leibovici (tl-cea)
 	rebase = group user/Thomas Leibovici (tl-cea)
@@ -20,8 +22,13 @@
 	push = +force group user/Thomas Leibovici (tl-cea)
 	pushMerge = group user/Thomas Leibovici (tl-cea)
 	read = group user/Thomas Leibovici (tl-cea)
+	label-Verified = -1..+1 group user/CEA-HPC (cea-gerrithub-hpc)
+	label-Verified = -1..+1 group user/Thomas Leibovici (tl-cea)
+	label-Verified = -1..+1 group user/ganesha-triggers
 [access "refs/tags/*"]
 	push = group user/Thomas Leibovici (tl-cea)
 	push = +force group user/Thomas Leibovici (tl-cea)
+	pushTag = group user/Thomas Leibovici (tl-cea)
+	pushSignedTag = group user/Thomas Leibovici (tl-cea)
 [receive]
 	requireChangeId = true
