Add push rights to fmonjalet

--- a/project.config
+++ b/project.config
@@ -7,6 +7,7 @@
 	description = Parallel Heterogeneous Object Store
 [access "refs/*"]
 	owner = group user/Thomas Leibovici (tl-cea)
+	owner = group user/Florent Monjalet (fmonjalet)
 [access "refs/for/refs/*"]
 	label-Code-Review = -2..+2 group user/Thomas Leibovici (tl-cea)
 	label-Verified = -1..+1 group user/Thomas Leibovici (tl-cea)
@@ -20,6 +21,7 @@
 [access "refs/heads/*"]
 	create = group user/Thomas Leibovici (tl-cea)
 	push = +force group user/Thomas Leibovici (tl-cea)
+	push = +force group user/Florent Monjalet (fmonjalet)
 	pushMerge = group user/Thomas Leibovici (tl-cea)
 	read = group user/Thomas Leibovici (tl-cea)
 	label-Verified = -1..+1 group user/CEA-HPC (cea-gerrithub-hpc)
