store: change input data of phobos_get/put to file descriptor
Previous given xfer descriptor data consisted in a file path which was
opened during the command processing by the layout modules.
The CLI now opens the file descriptor of each input file path and close
them once Phobos process is done.

Change-Id: I63941ee77bcf58d611eb68b24c1694693d0324b0
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/5067
Reviewed-by: Linter
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Florent Monjalet <florent.monjalet@cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -2,5 +2,5 @@ AM_CFLAGS= $(CC_OPT)
 
 noinst_LTLIBRARIES=libpho_common.la
 
-libpho_common_la_SOURCES=common.c attrs.c type_utils.c log.c saj.c store_utils.c
+libpho_common_la_SOURCES=common.c attrs.c type_utils.c log.c saj.c
 libpho_common_la_LIBADD=-ljansson
