--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -1,6 +1,6 @@
 noinst_HEADERS=pho_cfg.h  pho_common.h  pho_dss.h  pho_io.h  pho_ldm.h \
 		pho_lrs.h  pho_mapper.h  pho_type_utils.h  pho_types.h \
-		pho_layout.h pho_store_utils.h
+		pho_layout.h
 
 # Required headers:
 #   - phobos_store.h  main program interface
