--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -17,7 +17,7 @@ INTEG_TESTS=test_dss.sh test_scsi.sh test_layouts.sh acceptance.sh \
 TESTS=$(UNIT_TESTS) $(INTEG_TESTS)
 
 noinst_PROGRAMS=$(check_PROGRAMS)
-noinst_HEADERS=pho_test_utils.h
+noinst_HEADERS=pho_test_utils.h pho_test_xfer_utils.h
 
 pre-check-local:
 	./test_lock.sh
