ldm: ltfs 2.4 uses standard linux tape driver instead of lin_tape
Since LTFS 2.4, lin_tape driver is no longer needed, and LTFS uses
the standard Linux tape driver instead.

This patch enables the support of LTFS 2.4 and standard Linux tape driver,
and drops the support of lin_tape and LTFS 2.2.
No compatibility is managed (phobos requires ltfs 2.4).

Update doc and tests accordingly.

Change-Id: Id752e32339b996c01e4d494c73518bfc871cec50
Signed-off-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/5072
Reviewed-by: Florent Monjalet <florent.monjalet@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/6384

--- a/src/ldm/Makefile.am
+++ b/src/ldm/Makefile.am
@@ -8,6 +8,6 @@ libpho_scsi_la_SOURCES=scsi_common.c scsi_api.c
 libpho_scsi_la_LIBADD=-lsgutils2
 
 libpho_ldm_la_SOURCES=ldm.c ldm_common.c ldm_lib_scsi.c ldm_lib_dummy.c \
-		      ldm_dev_dir.c ldm_dev_lintape.c ldm_fs_posix.c \
-		      ldm_fs_ltfs.c
+			ldm_dev_dir.c ldm_dev_scsi_tape.c ldm_fs_posix.c \
+			ldm_fs_ltfs.c
 libpho_ldm_la_LIBADD=libpho_scsi.la
