io: -lcrypto is a dependency of the io module for SHA* functions
-lcrypto was marked as a dependency for libpho_store, it is however
required by (and only by) libpho_io, for all SHA related functions.

Change-Id: Iacb5d2229bb786c4ff185572c1c1b62127ee7ea2
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/5095
Reviewed-by: Linter
Reviewed-by: Florent Monjalet <florent.monjalet@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/src/store/Makefile.am
+++ b/src/store/Makefile.am
@@ -9,4 +9,4 @@ libphobos_store_la_SOURCES=store.c
 libphobos_store_la_LIBADD=../common/libpho_common.la ../dss/libpho_dss.la \
 			  ../cfg/libpho_cfg.la ../ldm/libpho_ldm.la \
 			  ../lrs/libpho_lrs.la ../layout/libpho_layout.la \
-			  ../io/libpho_io.la -lcrypto
+			  ../io/libpho_io.la
